[project]
name = "anime-streaming"
version = "0.1.0"
description = ""
authors = [
    {name = "Damian L",email = "damian26lp@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "reflex (>=0.9.2.post1,<0.10.0)"
]

[tool.poetry]
packages = [{include = "anime_streaming", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
